src/test/deca/context/invalid/obj/declfield/test_field_already_method.deca
// Description:
//    declaration d'un attribut avec le meme nom qu'une methode dans la classe mere
//
// Resultats:
//   attribut déjà définie dans la classe mère en tant que methode
// 
// Historique:
//    cree le 01/01/2024

class B{
    void a(){
    }
}
class A extends B{
    int a;
}
